Quorum/Library/Tests/Actions/Fail/MissingVariable.quorum
use Libraries.Compute.Math
Math math
math:AbsoluteValue(0 + variable)